--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Robô que coleta tendência e analisa quais são os assuntos mais populares",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "serve": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +27,7 @@
   },
   "homepage": "https://github.com/felpdev/trends-bot#readme",
   "dependencies": {
+    "chalk": "^2.4.2",
     "chromedriver": "^2.46.0",
     "selenium-webdriver": "^4.0.0-alpha.1"
   }
